test/libsolidity/syntaxTests/nameAndTypeResolution/230_creating_contract_within_the_contract.sol
contract Test {
    function f() public { Test x = new Test(); }
}
// ----
// TypeError 7813: (51-59): Circular reference to contract bytecode either via "new" or "type(...).creationCode" / "type(...).runtimeCode".
